--- a/app/src/main/res/layout/activity_descriprion.xml
+++ b/app/src/main/res/layout/activity_descriprion.xml
@@ -4,9 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Description">
+    tools:context=".Description"
+    android:layout_gravity="center"
+    >
 
     <ImageView
+        android:scaleType="fitXY"
         android:id="@+id/image_desc"
         android:layout_width="match_parent"
         android:layout_height="300dp"
